--- a/content/presentation/css/presentation.css
+++ b/content/presentation/css/presentation.css
@@ -84,6 +84,16 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+.highlight {
+    display: inline-block;
+    line-height: 2rem;
+    padding: .5rem;
+    font-style: italic;
+    color: white;
+    background-color: #C1625F;
+    border-radius: 1rem;
+}
+
 
 
 /* Agnostics */
