--- a/content/presentation/css/presentation.css
+++ b/content/presentation/css/presentation.css
@@ -40,6 +40,16 @@
     color: white;
 }
 
+.reveal .slides > section img, 
+.reveal .slides > section > section img {
+    display: block;
+    padding: 1rem;
+    border: 0;
+    border-radius: .5rem;
+    background: transparent;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
 
 
 /* Targeting multiple slides. */
